# claude-context-local

./: CLAUDE.md  README.md  agents.md  common_utils.py  conftest.py  pyproject.toml  pytest.ini
chunking/: available_languages.py  base_chunker.py  multi_language_chunker.py  structured_data_chunker.py
chunking/languages/: __init__.py  kotlin_chunker.py
embeddings/: embedder.py  huggingface_auth.py  model_catalog.py  sentence_transformer.py
mcp_server/: code_search_server.py  server.py  strings.yaml
scripts/: cli.py  download_model_standalone.py  index_codebase.py  install.ps1  install.sh
search/: incremental_indexer.py  indexer.py  searcher.py
tests/: test_lancedb_schema.py  test_unsloth_embedder.py
tests/integration/: test_auto_reindex.py  test_full_flow.py  test_incremental_indexing.py  test_mcp_indexing.py  test_mcp_project_storage.py
tests/test_data/multi_language/: Calculator.kt  README.md  config.yaml  package.json  project.toml
tests/unit/: test_cli.py  test_common_utils.py  test_huggingface_auth.py  test_mcp_tool_descriptions.py  test_multi_language.py
